Fixed some layout issues

--- a/swaync/.config/swaync/style.css
+++ b/swaync/.config/swaync/style.css
@@ -234,7 +234,7 @@
 }
 
 .notification-group .notification-group-close-button .close-button {
-  margin-top: 11px;
+  margin-top: 10px;
   margin-right: 18px;
 }
 
