--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -4,12 +4,12 @@
     margin: 0;
     font-weight: 900;
     font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 15px;
 }
 
 window#waybar {
     background: transparent;
     margin-left: 20px;
+    font-size: 15px;
 }
 
 window > box {
@@ -36,6 +36,7 @@ window > box {
     padding-left: 5px;
     margin-right: 5px;
     color: #b4befe;
+    font-size: 17px;
 }
 
 #workspaces {
@@ -121,6 +122,7 @@ window > box {
 
 #custom-power {
     color: red;
+    font-size: 17px;
 }
 
 menu {
@@ -141,7 +143,8 @@ menuitem:hover {
 
 #custom-notification {
   color: #b4befe;
-  margin-left: 2px;
+  margin-left: 5px;
+  font-size: 17px;
 }
 
 #custom-media {
